# PointIR

./: .gitignore  .gitmodules  CMakeLists.txt  PointIR.kdev4  README.md
CMakeModules/: FindDBus.cmake
etc.windows/: Calibrate quick.bat  Calibrate.bat  PointIR.bat  README.txt  pointir_calibrationBeginHook.bat  pointir_calibrationEndHook.bat  system.conf
etc/PointIR/: calibrationBeginHook  calibrationEndHook
etc/dbus-1/system.d/: PointIR.conf
include/PointIR/: Frame.h  Point.h  PointArray.h
src/: DBusClient.cpp  DBusClient.hpp  Point.h  VideoSocketClient.cpp  VideoSocketClient.hpp
src/example/: SDL2.cpp
src/pointird/: CaptureFactory.cpp  CaptureFactory.hpp  ControllerFactory.cpp  ControllerFactory.hpp  OutputAdder.cpp  OutputAdder.hpp  OutputFactory.cpp  OutputFactory.hpp  Point.hpp  Processor.cpp  Processor.hpp  Tracker.cpp  Tracker.hpp  TrackerFactory.cpp  TrackerFactory.hpp  exceptions.hpp  main.cpp
src/pointird/Capture/: ACapture.hpp  CaptureCV.cpp  CaptureCV.hpp  CaptureV4L2.cpp  CaptureV4L2.hpp  OpenCV.cpp  OpenCV.hpp  Video4Linux2.cpp  Video4Linux2.hpp
src/pointird/Controller/: AController.hpp  DBus.cpp  DBus.hpp  DBusController.cpp  DBusController.hpp
src/pointird/FrameOutput/: AFrameOutput.hpp  UnixDomainSocket.cpp  UnixDomainSocket.hpp  UnixDomainSocketFrameOutput.cpp  UnixDomainSocketFrameOutput.hpp  WindowsNamedPipe.cpp  WindowsNamedPipe.hpp
src/pointird/PointDetector/: APointDetector.hpp  OpenCV.cpp  OpenCV.hpp  PointDetectorCV.cpp  PointDetectorCV.hpp
src/pointird/PointFilter/: APointFilter.hpp  Chain.hpp  LimitNumberFilter.cpp  LimitNumberFilter.hpp  OffscreenFilter.cpp  OffscreenFilter.hpp  PointFilterChain.hpp
src/pointird/PointOutput/: APointOutput.hpp  DebugOpenCV.cpp  DebugOpenCV.hpp  DebugPointOutputCV.cpp  DebugPointOutputCV.hpp  PointOutputUinput.cpp  PointOutputUinput.hpp  TUIO.cpp  TUIO.hpp  TUIOPointOutput.cpp  TUIOPointOutput.hpp  Uinput.cpp  Uinput.hpp  UnixDomainSocket.cpp  UnixDomainSocket.hpp  UnixDomainSocketPointOutput.cpp  UnixDomainSocketPointOutput.hpp  Win8TouchInjection.cpp  Win8TouchInjection.hpp
src/pointird/PointOutput/Win8TouchInjection/: touchinjection_sdk80.h
src/pointird/Tracker/: ATracker.hpp  Hungarian.cpp  Hungarian.hpp  Simple.cpp  Simple.hpp  ixoptimal.cpp
src/pointird/Unprojector/: AAutoUnprojector.hpp  AUnprojector.hpp  AutoOpenCV.cpp  AutoOpenCV.hpp  AutoUnprojectorCV.cpp  AutoUnprojectorCV.hpp  CalibrationDataFile.cpp  CalibrationDataFile.hpp  CalibrationImageFile.cpp  CalibrationImageFile.hpp
src/tool/: SDL2Calibrator.cpp
src/tool/image/: important.c  success.c
